--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <script src="script.js" defer></script>
     <link rel="stylesheet" href="style.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -15,11 +16,12 @@
       </div>
     </header>
     <main>
+      <button class="tb">сменить тему</button>
       <div>
         <h1>Зоопарк</h1>
         <img
           src="https://avatars.mds.yandex.net/i?id=0fb71c95c9e1e383af7431e381564e4e48139084-12496425-images-thumbs&n=13"
-          width="700px"
+          width="550px"
         />
         <h3 class="inf-h">
           Крокоди́лы (лат. Crocodilia) — отряд вторично-водных животных класса
@@ -41,7 +43,8 @@
           (семейство Gavialidae, иногда упраздняемое до подсемейства в составе
           семейства настоящих крокодилов).
         </h3>
-        <a class="big-a"
+        <a
+          class="big-a"
           href="https://ru.wikipedia.org/wiki/%D0%9A%D1%80%D0%BE%D0%BA%D0%BE%D0%B4%D0%B8%D0%BB%D1%8B"
           >больше о крокодилах</a
         >
@@ -49,7 +52,7 @@
       <div>
         <img
           src="https://avatars.mds.yandex.net/i?id=e15a60f298e8551f8d2719b7c3435f40edd9c009-12714643-images-thumbs&n=13"
-          width="700px"
+          width="550px"
         />
         <h3 class="inf-h">
           Ено́т-полоску́н, или америка́нский енот (лат. Procyon lotor), — хищное
@@ -63,20 +66,26 @@
           флоре и фауне. B Беларуси хорошо прижился в Полесье. Енот легко
           приручается и подходит для разведения в неволе.
         </h3>
-        <a class="big-a"
+        <a
+          class="big-a"
           href="https://ru.wikipedia.org/wiki/%D0%95%D0%BD%D0%BE%D1%82-%D0%BF%D0%BE%D0%BB%D0%BE%D1%81%D0%BA%D1%83%D0%BD"
           >больше о енотах</a
         >
       </div>
       <div>
-        <img src="1664178945_70-pofoto-club-p-kanadskaya-vidra-80.jpg" width="700px" />
+        <img
+          src="1664178945_70-pofoto-club-p-kanadskaya-vidra-80.jpg"
+          width="550px"
+        />
         <h3 class="inf-h">
           Вы́дра, также речная выдра, обыкновенная выдра, или поре́шня/поре́чня
           (лат. Lutra lutra) — вид хищных млекопитающих из семейства кунашевых,
           ведущих полуводный образ жизни. В литературе под словом «выдра» обычно
           подразумевается этот вид, хотя род выдр насчитывает несколько видов.
         </h3>
-        <a  class="big-a" href="https://ru.wikipedia.org/wiki/%D0%92%D1%8B%D0%B4%D1%80%D0%B0"
+        <a
+          class="big-a"
+          href="https://ru.wikipedia.org/wiki/%D0%92%D1%8B%D0%B4%D1%80%D0%B0"
           >больше о выдрах</a
         >
       </div>
